# reforge

./: .gitignore  AGENTS.md  Cargo.toml  Cross.toml  IROH_INTEGRATION_STATUS.md  IROH_UPDATE_STATUS.md  README.md  diesel.toml  flake.nix  forge.default.yaml  forge.schema.json  forge.yaml  install.sh  iroh-examples.txt  package-lock.json  package.json  vertex.json
crates/forge_api/: Cargo.toml
crates/forge_api/src/: api.rs  forge_api.rs  lib.rs
crates/forge_config/: .forge.toml  Cargo.toml
crates/forge_config/src/: auto_dump.rs  compact.rs  config.rs  decimal.rs  http.rs  legacy.rs  lib.rs  model.rs  percentage.rs  reader.rs  retry.rs  writer.rs
crates/forge_desktop/: Cargo.toml  tauri.conf.json
crates/forge_desktop/frontend/: package-lock.json  package.json
crates/forge_desktop/frontend/src/: App.css  App.tsx  Chat.tsx  McpConfig.tsx  ModelSelector.tsx
crates/forge_desktop/src/: main.rs
crates/forge_display/: Cargo.toml
crates/forge_display/src/: code.rs  diff.rs  lib.rs  markdown.rs
crates/forge_infra/: Cargo.toml
crates/forge_infra/src/: console.rs  env.rs  executor.rs  forge_infra.rs  fs_read.rs  fs_read_dir.rs  fs_write.rs  grpc.rs  http.rs  inquire.rs  lib.rs  mcp_client.rs  mcp_server.rs  walker.rs
crates/forge_infra/src/auth/: mod.rs  strategy.rs  util.rs
crates/forge_infra/src/database/: mod.rs  pool.rs  schema.rs
crates/forge_infra/src/repository/: app_config.rs  cacache_repository.rs  conversation.rs  mod.rs
crates/forge_iroh_node/: Cargo.toml  README.md
crates/forge_iroh_node/src/: config.rs  error.rs  handler.rs  lib.rs  message.rs  node.rs
crates/forge_json_repair/: Cargo.toml
crates/forge_json_repair/src/: lib.rs  parser.rs  schema_coercion.rs
crates/forge_json_repair/tests/: comments_unicode.rs  complex_repairs.rs  error_cases.rs  escaping.rs  numbers.rs  punctuation.rs  quotes.rs  special_quotes.rs  special_values.rs  strings.rs  truncation.rs  valid_json.rs
crates/forge_main/: Cargo.toml
crates/forge_main/src/: banner.rs  built_in_commands.json  cli.rs  cli_format.rs  conversation_selector.rs  display_constants.rs  editor.rs  env.rs  info.rs  input.rs  lib.rs  main.rs  model.rs  porcelain.rs  prompt.rs  sandbox.rs  select.rs  state.rs  stream_renderer.rs  sync_display.rs  title_display.rs  tools_display.rs  ui.rs  update.rs  utils.rs  vscode.rs  zsh_plugin.rs
crates/forge_main/src/completer/: command.rs  input_completer.rs  search_term.rs
crates/forge_main/src/config/: display.rs  error.rs  handler.rs  helpers.rs  mod.rs
crates/forge_main/src/zsh/: mod.rs  plugin.rs  rprompt.rs  style.rs
crates/forge_markdown_stream/: Cargo.toml
crates/forge_markdown_stream/src/: code.rs  heading.rs  lib.rs  list.rs  renderer.rs  style.rs  table.rs  theme.rs  utils.rs
crates/forge_markdown_stream/src/snapshots/: forge_markdown_stream__table__tests__all_empty_cells.snap  forge_markdown_stream__table__tests__cell_with_bold_tag.snap  forge_markdown_stream__table__tests__cell_with_code_tag.snap  forge_markdown_stream__table__tests__cell_with_html_like_tags.snap  forge_markdown_stream__table__tests__cell_with_italic_tag.snap  forge_markdown_stream__table__tests__cell_with_link_tag.snap  forge_markdown_stream__table__tests__cell_with_mixed_tags.snap  forge_markdown_stream__table__tests__cell_with_nested_tags.snap  forge_markdown_stream__table__tests__complex_table_with_links.snap  forge_markdown_stream__table__tests__custom_margin.snap  forge_markdown_stream__table__tests__empty_cells.snap  forge_markdown_stream__table__tests__header_with_tags.snap  forge_markdown_stream__table__tests__long_content_in_cells.snap  forge_markdown_stream__table__tests__long_content_with_tags_wrapping.snap  forge_markdown_stream__table__tests__many_rows.snap  forge_markdown_stream__table__tests__multiline_content_wrapping.snap  forge_markdown_stream__table__tests__narrow_width_shrinks_columns.snap  forge_markdown_stream__table__tests__no_margin.snap  forge_markdown_stream__table__tests__numeric_content.snap  forge_markdown_stream__table__tests__real_world_table.snap  forge_markdown_stream__table__tests__real_world_table_with_all_formatting.snap  forge_markdown_stream__table__tests__simple_table.snap  forge_markdown_stream__table__tests__single_cell.snap  forge_markdown_stream__table__tests__single_column_many_rows.snap  forge_markdown_stream__table__tests__single_row_header_only.snap  forge_markdown_stream__table__tests__special_characters.snap  forge_markdown_stream__table__tests__strikethrough_in_table.snap  forge_markdown_stream__table__tests__three_columns.snap  forge_markdown_stream__table__tests__uneven_row_lengths.snap  forge_markdown_stream__table__tests__unicode_content.snap  forge_markdown_stream__table__tests__unicode_with_tags.snap  forge_markdown_stream__table__tests__varying_column_widths.snap  forge_markdown_stream__table__tests__very_narrow_width.snap  forge_markdown_stream__table__tests__whitespace_content.snap  (+1 more)
crates/forge_repo/: Cargo.toml
crates/forge_repo/proto/: forge.proto
crates/forge_repo/src/: agent.rs  agent_repository.rs  app_config.rs  context_engine.rs  conversation.rs  forge_repo.rs  fuzzy_search.rs  indexing.rs  lib.rs  provider.json  provider.rs  skill.rs  skill_repository.rs  validation.rs  workspace.rs
crates/forge_repo/src/agents/: forge.md  muse.md  (+1 more)
crates/forge_select/: Cargo.toml
crates/forge_select/src/: input.rs  lib.rs  multi.rs  select.rs  terminal.rs  widget.rs
crates/forge_services/: Cargo.toml
crates/forge_services/src/: agent_loader.rs  agent_registry.rs  app_config.rs  attachment.rs  auth.rs  command.rs  command_loader.rs  context_engine.rs  conversation.rs  custom_instructions.rs  discovery.rs  env.rs  error.rs  fd.rs  forge_services.rs  http.rs  indexing.rs  infra.rs  instructions.rs  lib.rs  permissions.default.yaml  policy.rs  preferences.rs  provider.rs  provider_auth.rs  provider_service.rs  template.rs  workflow.rs
crates/forge_snaps/: Cargo.toml
crates/forge_snaps/src/: service.rs
crates/forge_spinner/: Cargo.toml
crates/forge_spinner/src/: lib.rs  progress_bar.rs  stopwatch.rs
(+511 files in other folders)
