[package]
name = "forge_desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
forge_api = { path = "../forge_api" }
forge_domain = { path = "../forge_domain" }
forge_infra = { path = "../forge_infra" }
forge_services = { path = "../forge_services" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0-beta.21", features = ["unstable", "wry"] }
tokio-stream = "0.1"

[build-dependencies]
tauri-build = { version = "2.0.0-beta.17", features = [] }
