[package]
name = "forge_iroh_node"
version = "0.1.0"
edition = "2024"

[dependencies]
forge_domain.workspace = true
anyhow.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
iroh = "0.90.0"
iroh-gossip = "0.90.0"
rand = "0.8.5"
derive_more.workspace = true
forge_app = { path = "../forge_app" }
whoami.workspace = true
sha2 = "0.10"

[dev-dependencies]
pretty_assertions.workspace = true

