[package]
name = "forge_main"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "forge"
path = "src/main.rs"


[dependencies]
thiserror = { workspace = true }
clap.workspace = true
console.workspace = true
forge_app.workspace = true
forge_api.workspace = true
forge_domain.workspace = true
forge_walker.workspace = true
forge_display.workspace = true
forge_tracker.workspace = true

forge_spinner.workspace = true
forge_select.workspace = true

merge.workspace = true
forge_fs.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
colored.workspace = true

anyhow.workspace = true
derive_setters.workspace = true
lazy_static.workspace = true
reedline.workspace = true
nu-ansi-term.workspace = true
nucleo.workspace = true
tracing.workspace = true
chrono.workspace = true
serde_json.workspace = true
serde.workspace = true
strum.workspace = true
strum_macros.workspace = true

convert_case.workspace = true
update-informer = { version = "1.2.0", default-features = false, features = [
    "npm",
    "ureq",
    "rustls-tls",
] }
open.workspace = true
humantime.workspace = true
num-format.workspace = true
atty = "0.2"
url.workspace = true
rust-embed = { version = "8.5", features = ["interpolate-folder-path"] }
indexmap.workspace = true
async-recursion.workspace = true

[target.'cfg(not(target_os = "android"))'.dependencies]
arboard = "3.4"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "time", "test-util"] }
insta.workspace = true
pretty_assertions.workspace = true
tempfile.workspace = true
serial_test = "3.2"
fake = { version = "4.4.0", features = ["derive"] }
forge_domain = { path = "../forge_domain" }
strip-ansi-escapes = "0.2"
