[package]
name = "forge_select"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
console.workspace = true
derive_more.workspace = true
dialoguer.workspace = true

crossterm.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
