[package]
name = "forge_spinner"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
colored.workspace = true
tokio.workspace = true
indicatif = "0.18.0"
rand = "0.9.2"

[dev-dependencies]
pretty_assertions.workspace = true
tokio = { workspace = true, features = ["test-util"] }
